Fixed button syling on mobile

--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -95,6 +95,11 @@
     align-items: center;
 }
 
+.actions> :is(button, a) {
+    flex: 1;
+    text-align: center;
+}
+
 .cancel,
 .signInButton,
 .signUpButton,
@@ -221,6 +226,11 @@
         position: relative;
         z-index: 3;
     }
+
+    .actions> :is(button, a) {
+        flex: 1;
+        text-align: center;
+    }
 }
 
 /* Small mobile adjustments */
@@ -235,10 +245,5 @@
 
     .actions {
         gap: 0.75rem;
-    }
-
-    .actions button {
-        flex: 1 1 auto;
-
     }
 }
